--- a/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
+++ b/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
@@ -2,6 +2,8 @@
 @import "SCSSROOT/org.civicrm.shoreditch/base/scss/overrides/variables";
 @import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/variables";
 
+$outsideNamespaceMarker: '.___outside-namespace';
+
 //== Steps
 //
 //##
