PCHR-2683: Add leave widget skeleton component

--- a/contactsummary/views/mainTemplate.html
+++ b/contactsummary/views/mainTemplate.html
@@ -4,5 +4,8 @@
       <div ng-include="ContactSummaryCtrl.partials.keyDetails"></div>
       <div ng-include="ContactSummaryCtrl.partials.keyDates"></div>
     </div>
+    <div class="col-sm-6">
+      <leave-widget></leave-widget>
+    </div>
   </div>
 </div>
