PCHR-2683: Add Leave Widget stylings

--- a/contactsummary/scss/contactsummary.scss
+++ b/contactsummary/scss/contactsummary.scss
@@ -1,6 +1,10 @@
 @import "SCSSROOT/org.civicrm.shoreditch/scss/bootstrap/overrides/variables";
 @import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/variables";
 
+#bootstrap-theme {
+  @import "./components/*";
+}
+
 #contactsummary {
   padding: 20px;
 
