--- a/contactsummary/views/components/leave-widget/leave-widget.html
+++ b/contactsummary/views/components/leave-widget/leave-widget.html
@@ -4,14 +4,14 @@
   </header>
   <div class="panel-body">
     <div class="leave-widget__types">
-      <table class="table table-responsive">
+      <table class="table-responsive">
         <thead>
           <tr>
             <th>Type</th>
             <th>
               Available balance
-              <button>
-                <i class="fa fa-info"></i>
+              <button class="info-button">
+                <i class="fa fa-info-circle"></i>
               </button>
             </th>
           </tr>
@@ -36,14 +36,14 @@
     <hr />
 
     <div class="leave-widget__sickness">
-      <table class="table table-responsive">
+      <table class="table-responsive">
         <thead>
           <tr>
             <th>Sickness</th>
             <th>
               Amount taken
-              <button>
-                <i class="fa fa-info"></i>
+              <button class="info-button">
+                <i class="fa fa-info-circle"></i>
               </button>
             </th>
           </tr>
@@ -58,21 +58,21 @@
 
       <h4>Sickness heatmap</h4>
 
-      <ul class="leave-widget__sickeness__heatmap">
-        <li>M</li>
-        <li>T</li>
-        <li>W</li>
-        <li>T</li>
-        <li>F</li>
-        <li>S</li>
-        <li>S</li>
+      <ul class="week-heatmap">
+        <li class="week-heatmap__low" title="Monday">M</li>
+        <li class="week-heatmap__low" title="Tuesday">T</li>
+        <li class="week-heatmap__low" title="Wednesday">W</li>
+        <li class="week-heatmap__high" title="Thursday">T</li>
+        <li class="week-heatmap__medium" title="Friday">F</li>
+        <li class="week-heatmap__disabled" title="Saturday">S</li>
+        <li class="week-heatmap__disabled" title="Sunday">S</li>
       </ul>
     </div>
 
     <hr />
 
     <div class="leave-widget__next-leave">
-      <table class="table table-responsive">
+      <table class="table-responsive">
         <thead>
           <tr>
             <th>Next leave</th>
@@ -83,44 +83,32 @@
           <tr>
             <td class="leave-widget__next-leave__details">
               <h3>Holiday/Vacation</h3>
-              <div class="leave-widget__next-leave__date-range">
-                <div class="leave-widget__next-leave__date-range__from">
-                  <span class="leave-widget__next-leave__date-range__day">
-                    14
-                  </span>
-                  <span class="leave-widget__next-leave__date-range__month">
-                    Aug
-                  </span>
-                  <span class="leave-widget__next-leave__date-range__year">
-                    2017
-                  </span>
-                  <span class="leave-widget__next-leave__date-range__time">
-                    (11:00)
-                  </span>
+
+              <div class="date-range-calendar">
+                <div class="date-range-calendar__from">
+                  <span class="date-range-calendar__day">14</span>
+                  <span class="date-range-calendar__month">Aug</span>
+                  <span class="date-range-calendar__year">2017</span>
+                  <span class="date-range-calendar__time">(11:00)</span>
                 </div>
-                <div class="leave-widget__next-leave__date-to">
-                  <span class="leave-widget__next-leave__date-range__day">
-                    18
-                  </span>
-                  <span class="leave-widget__next-leave__date-range__month">
-                    Aug
-                  </span>
-                  <span class="leave-widget__next-leave__date-range__year">
-                    2017
-                  </span>
-                  <span class="leave-widget__next-leave__date-range__time">
-                    (11:00)
-                  </span>
+                <div class="date-range-calendar__to">
+                  <span class="date-range-calendar__day">18</span>
+                  <span class="date-range-calendar__month">Aug</span>
+                  <span class="date-range-calendar__year">2017</span>
+                  <span class="date-range-calendar__time">(11:00)</span>
                 </div>
               </div>
             </td>
-            <td class="leave-widget__next-leave__status">Approved</td>
+            <td class="leave-widget__next-leave__status">
+              <span class="leave-status-approved">Approved</span>
+            </td>
           </tr>
         </tbody>
       </table>
 
       <h4>Deduction</h4>
-      <span>4d 8h</span>
+
+      <span class="leave-widget__next-leave__deduction">4d 8h</span>
     </div>
   </div>
 </div>
