--- a/contactsummary/scss/components/_week-heatmap.scss
+++ b/contactsummary/scss/components/_week-heatmap.scss
@@ -8,14 +8,14 @@ ul.week-heatmap {
     border-radius: $border-radius-small;
     color: $crm-white;
     display: inline-block;
-    font-size: $font-size-medium;
+    font-size: $font-size-h3;
     font-weight: $crm-font-weight-h1;
     height: 40px;
     line-height: 40px;
-    width: 40px;
     margin-bottom: 10px;
     margin-right: 10px;
     text-align: center;
+    width: 40px;
   }
 
   li.week-heatmap__medium {
