PCHR-2683: PR Feedback; Use muted text

--- a/contactsummary/views/components/leave-widget/leave-widget.html
+++ b/contactsummary/views/components/leave-widget/leave-widget.html
@@ -89,13 +89,13 @@
                   <span class="date-range-calendar__day">14</span>
                   <span class="date-range-calendar__month">Aug</span>
                   <span class="date-range-calendar__year">2017</span>
-                  <span class="date-range-calendar__time">(11:00)</span>
+                  <span class="date-range-calendar__time text-muted">(11:00)</span>
                 </div>
                 <div class="date-range-calendar__to">
                   <span class="date-range-calendar__day">18</span>
                   <span class="date-range-calendar__month">Aug</span>
                   <span class="date-range-calendar__year">2017</span>
-                  <span class="date-range-calendar__time">(11:00)</span>
+                  <span class="date-range-calendar__time text-muted">(11:00)</span>
                 </div>
               </div>
             </td>
