PCHR-2719: Display leave balances

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-balance.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-balance.html
@@ -12,9 +12,9 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="type in leaveWidgetBalance.absenceTypes">
+      <tr ng-repeat="type in leaveWidgetBalance.absenceTypeEntitlements">
         <td class="leave-widget__types-name">{{ type.title }}</td>
-        <td class="leave-widget__types-balance">8d 5h</td>
+        <td class="leave-widget__types-balance">{{ type.balance }}</td>
       </tr>
     </tbody>
   </table>
