--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-balance-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-balance-tab.html
@@ -26,11 +26,11 @@
                 <tr ng-repeat="record in leaveBalanceTab.report">
                   <td>{{record.contact_display_name}}</td>
                   <td ng-repeat-start="type in leaveBalanceTab.selectedAbsenceTypes"
-                     >{{ +record.absence_types[type.id].entitlement + type.calculation_unit_symbol }}</td>
-                  <td>{{ +record.absence_types[type.id].used + type.calculation_unit_symbol }}</td>
-                  <td>{{ +record.absence_types[type.id].balance + type.calculation_unit_symbol }}</td>
+                     >{{ record.absence_types[type.id].entitlement | timeUnitApplier : type.calculation_unit_name }}</td>
+                  <td>{{ record.absence_types[type.id].used | timeUnitApplier : type.calculation_unit_name }}</td>
+                  <td>{{ record.absence_types[type.id].balance | timeUnitApplier : type.calculation_unit_name }}</td>
                   <td ng-repeat-end
-                     >{{ +record.absence_types[type.id].requested + type.calculation_unit_symbol }}</td>
+                     >{{ record.absence_types[type.id].requested | timeUnitApplier : type.calculation_unit_name }}</td>
                 </tr>
                 <tr ng-if="leaveBalanceTab.reportCount > leaveBalanceTab.pagination.size">
                   <td colspan="6">
