PCHR-2719: Replace session with selected contact id

--- a/contactsummary/views/mainTemplate.html
+++ b/contactsummary/views/mainTemplate.html
@@ -5,7 +5,7 @@
       <div ng-include="ContactSummaryCtrl.partials.keyDates"></div>
     </div>
     <div class="col-sm-6">
-      <leave-widget></leave-widget>
+      <leave-widget contact-id="ContactSummaryCtrl.contactId"></leave-widget>
     </div>
   </div>
 </div>
