--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget.html
@@ -6,8 +6,8 @@
     <crm-loading show="!leaveWidget.loading.component && !leaveWidget.loading.childComponents">
       <leave-widget-balance
         absence-types="leaveWidget.absenceTypes"
+        contact-id="leaveWidget.contactId"
         current-absence-period="leaveWidget.currentAbsencePeriod"
-        logged-in-contact-id="leaveWidget.loggedInContactId"
       ></leave-widget-balance>
 
       <hr />
