PCHR-2719: Use timeUnitApplier filter to display balance

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-balance.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-balance.html
@@ -14,7 +14,7 @@
     <tbody>
       <tr ng-repeat="type in leaveWidgetBalance.absenceTypeEntitlements">
         <td class="leave-widget__types-name">{{ type.title }}</td>
-        <td class="leave-widget__types-balance">{{ type.balance }}</td>
+        <td class="leave-widget__types-balance">{{ type.balance | timeUnitApplier:'days' }}</td>
       </tr>
     </tbody>
   </table>
