PCHR-2720: Display sick leave balances

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget.html
@@ -12,39 +12,12 @@
 
       <hr />
 
-      <div class="leave-widget__sickness">
-        <table class="table-responsive">
-          <thead>
-            <tr>
-              <th>Sickness</th>
-              <th>
-                Amount taken
-                <button class="info-button">
-                  <i class="fa fa-info-circle"></i>
-                </button>
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="leave-widget__sickness-type">Sick</td>
-              <td class="leave-widget__sickness-balance">8d 1h</td>
-            </tr>
-          </tbody>
-        </table>
-
-        <h4>Sickness heatmap</h4>
-
-        <ul class="week-heatmap">
-          <li class="week-heatmap__low" title="Monday">M</li>
-          <li class="week-heatmap__low" title="Tuesday">T</li>
-          <li class="week-heatmap__low" title="Wednesday">W</li>
-          <li class="week-heatmap__high" title="Thursday">T</li>
-          <li class="week-heatmap__medium" title="Friday">F</li>
-          <li class="week-heatmap__disabled" title="Saturday">S</li>
-          <li class="week-heatmap__disabled" title="Sunday">S</li>
-        </ul>
-      </div>
+      <Leave-widget-heatmap
+        title="Sickness"
+        absence-types="leaveWidget.sicknessAbsenceTypes"
+        contact-id="leaveWidget.contactId"
+        current-absence-period="leaveWidget.currentAbsencePeriod"
+      ></Leave-widget-heatmap>
 
       <hr />
 
