--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-heatmap.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-heatmap.html
@@ -21,13 +21,5 @@
 
   <h4>{{leaveWidgetHeatmap.title}} heatmap</h4>
 
-  <ul class="week-heatmap">
-    <li class="week-heatmap__low" title="Monday">M</li>
-    <li class="week-heatmap__low" title="Tuesday">T</li>
-    <li class="week-heatmap__low" title="Wednesday">W</li>
-    <li class="week-heatmap__high" title="Thursday">T</li>
-    <li class="week-heatmap__medium" title="Friday">F</li>
-    <li class="week-heatmap__disabled" title="Saturday">S</li>
-    <li class="week-heatmap__disabled" title="Sunday">S</li>
-  </ul>
+  <week-heatmap values="leaveWidgetHeatmap.weekHeatMap"></week-heatmap>
 </div>
