PCHR-2720: PR Feedback; Add leave requests heatmap component

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-absence-types-amount-taken.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-absence-types-amount-taken.html
@@ -25,5 +25,7 @@
 
   <h4>{{absenceTypesTaken.title}} heatmap</h4>
 
-  <heatmap values="absenceTypesTaken.heatmapValues"></heatmap>
+  <leave-requests-heatmap
+    leave-requests="absenceTypesTaken.leaveRequests"
+  ></leave-requests-heatmap>
 </div>
