PCHR-2620: Improve structure of scss partials

--- a/org.civicrm.bootstrapcivihr/scss/civihr.scss
+++ b/org.civicrm.bootstrapcivihr/scss/civihr.scss
@@ -3,6 +3,7 @@
 @import "SCSSROOT/org.civicrm.shoreditch/scss/bootstrap/mixins/ALL";
 @import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/mixins";
 
+@import "overrides/crm/*";
 @import "overrides/style/*";
 @import "components/*";
 @import "common/*"
