--- a/hrjobcontract/views/modalForm.html
+++ b/hrjobcontract/views/modalForm.html
@@ -574,14 +574,15 @@
                     class="form-control"
                     hrjc-number="2"
                     hrjc-number-float="true"
+                    hrjc-to-hours="leaveEntry.leave_calculation_unit_name === 'hours'"
+                    hrjs-not-negative="true"
                     ng-model="leaveEntry.leave_amount" ng-disabled="isDisabled">
                 </div>
                 <div class="col-sm-1 form-control-static">{{leaveEntry.leave_calculation_unit_label}}</div>
                 <div class="col-sm-3">
-                  <div>{{leaveEntry.add_public_holidays}}</div>
                   <div class="btn-group">
-                    <label class="btn btn-gray" ng-model="leaveEntry.add_public_holidays" uib-btn-radio="true">Yes</label>
-                    <label class="btn btn-gray" ng-model="leaveEntry.add_public_holidays" uib-btn-radio="false">No</label>
+                    <label class="btn btn-gray" ng-disabled="leaveEntry.is_add_public_holidays_readonly" ng-model="leaveEntry.add_public_holidays" uib-btn-radio="true">Yes</label>
+                    <label class="btn btn-gray" ng-disabled="leaveEntry.is_add_public_holidays_readonly" ng-model="leaveEntry.add_public_holidays" uib-btn-radio="false">No</label>
                   </div>
                 </div>
                 <div class="col-sm-3 form-control-static">
