PCHR-2721: Remove bootstrap classes from controller

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-next-leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-next-leave.html
@@ -26,7 +26,7 @@
           </div>
         </td>
         <td class="leave-widget__next-leave__status">
-          <span class="leave-status-{{nextLeave.requestStatus.textColor}}">{{nextLeave.requestStatus.label}}</span>
+          <span class="leave-status-{{nextLeave.requestStatus.name}}">{{nextLeave.requestStatus.label}}</span>
         </td>
       </tr>
       <tr ng-if="!nextLeave.nextLeaveRequest">
