--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-widget.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-widget.scss
@@ -62,8 +62,17 @@
       color: $gray-darker;
     }
 
+    .leave-status-admin_approved,
     .leave-status-approved {
       color: $brand-success;
+    }
+
+    .leave-status-awaiting_approval {
+      color: $brand-warning;
+    }
+
+    .leave-status-more_information_required {
+      color: $brand-primary;
     }
   }
 }
