PCHR-2620: Add style for user menu

--- a/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
+++ b/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
@@ -6,6 +6,18 @@
 
 $outsideNamespaceMarker: '.___outside-namespace';
 
+//== User Menu
+//
+//##
+$user-menu-color: $gray-darker;
+$user-menu-line-height: 60px;
+$user-menu-minify-breakpoint: 1250px;
+$user-menu-bg-hover: $gray-lighter;
+$user-menu-dropdown-bg: $crm-white;
+$user-menu-dropdown-link-color: $gray-darker;
+$user-menu-dropdown-link-bg-hover: $gray-lighter;
+
+
 //== Steps
 //
 //##
