PCHR-2621: Move outsideNamespaceMarker outside the individual partials

--- a/org.civicrm.bootstrapcivihr/scss/civihr.scss
+++ b/org.civicrm.bootstrapcivihr/scss/civihr.scss
@@ -1,10 +1,14 @@
 @import "overrides/variables";
-
 @import "SCSSROOT/org.civicrm.shoreditch/scss/bootstrap/mixins/ALL";
 @import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/mixins";
 
-@import "overrides/crm/*";
-@import "overrides/style/*";
 @import "components/*";
-@import "common/*"
+@import "common/*";
 @import "pages/*";
+
+@import "overrides/style/*";
+
+#{$outsideNamespaceMarker} {
+  @import "components/outside-namespace/*";
+  @import "overrides/crm/*";
+}
