PCHR-2621: Add link hover color to user menu variables

--- a/org.civicrm.bootstrapcivihr/scss/components/outside-namespace/_user-menu.scss
+++ b/org.civicrm.bootstrapcivihr/scss/components/outside-namespace/_user-menu.scss
@@ -53,6 +53,7 @@
 
     &:hover {
       background: $user-menu-dropdown-link-bg-hover;
+      color: $user-menu-dropdown-link-color-hover;
       text-decoration: none;
     }
 
