--- a/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
+++ b/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
@@ -15,6 +15,7 @@ $user-menu-minify-breakpoint: 1250px;
 $user-menu-bg-hover: $gray-lighter;
 $user-menu-dropdown-bg: $crm-white;
 $user-menu-dropdown-link-color: $gray-darker;
+$user-menu-dropdown-link-color-hover: $gray-darker;
 $user-menu-dropdown-link-bg-hover: $gray-lighter;
 
 
